:sparkles: add create schedule endpoint
