# config/routes.rb
@@ -12,6 +12,7 @@ Rails.application.routes.draw do
   namespace :api do
     namespace :admin do
       resources :activities
+      resources :schedules
     end
     namespace :users do
       post :create, path: '/register' ,to: 'create'
