# swagger/v1/swagger.yaml
@@ -43,7 +43,7 @@ paths:
           examples:
             application/json:
               data:
-                id: 126
+                id: 41
                 name: foo
                 description: bar
                 mode: outdoor
@@ -107,10 +107,11 @@ paths:
           examples:
             application/json:
               data:
-                id: 127
+                id: 42
                 name: new name
-                description: Inventore quis soluta. Minima sunt omnis. Est dolor alias.
-                mode: outdoor
+                description: Voluptatibus facilis debitis. Aut voluptatem eum. Sit
+                  vel ea.
+                mode: indoor
         '404':
           description: Not found
           examples:
@@ -132,13 +133,12 @@ paths:
           examples:
             application/json:
               data:
-                id: 129
-                name: id
-                description: Rerum id expedita. Nam ea aperiam. Praesentium animi
-                  at.
-                mode: virtual
-                created_at: '2020-12-12T04:22:43.645Z'
-                updated_at: '2020-12-12T04:22:43.645Z'
+                id: 44
+                name: quaerat
+                description: Unde quos voluptates. Aut ipsa eum. Maxime eligendi aut.
+                mode: indoor
+                created_at: '2020-12-11T23:25:42.218-06:00'
+                updated_at: '2020-12-11T23:25:42.218-06:00'
         '404':
           description: Not found
           examples:
@@ -147,6 +147,52 @@ paths:
                 type: Record not found
                 message: Activity with id = 0 wasn't found
                 details: {}
+  "/admin/schedules":
+    post:
+      summary: Add a new schedule
+      tags:
+      - Schedules
+      description: Add a schedule available for activities. This schedules may have
+        many activities. For example, from 8AM to 10AM can be scheduled a swimming
+        session and a boxing session
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      parameters:
+      - name: schedule
+        in: body
+        schema:
+          type: object
+          properties:
+            begin_at:
+              type: string
+              format: date-time
+            finish_at:
+              type: string
+              format: date-time
+          required:
+          - begin_at
+          - finish_at
+      responses:
+        '200':
+          description: Create a new schedule
+          examples:
+            application/json:
+              data:
+                id: 6
+                begin_at: '2020-12-12T00:25:41.000-06:00'
+                finish_at: '2020-12-12T02:25:41.000-06:00'
+        '422':
+          description: Invalid values
+          examples:
+            application/json:
+              error:
+                type: Unprocessable entity
+                message: Validation failed
+                details:
+                  begin_at:
+                  - must be greater than actual date
   "/oauth/token":
     post:
       summary: Get access token
@@ -182,12 +228,12 @@ paths:
           description: Get access token
           examples:
             application/json:
-              access_token: q24agAUT4R0CVGSrfaQSSkJ1QsPbs-iZhotasI_-xlc
+              access_token: oLhRggiuxa0kF0HAJr0iHPAVs5I8ceTvfrujQRX0VaI
               token_type: Bearer
               expires_in: 7200
-              refresh_token: XKSC-IzdPGUlsdJo8EA5Nry9El4134J82coFajIfHgY
+              refresh_token: eT-xZ1srnk-mLbTgcbfidAyrnVgt7TuzlcLzwaZYSHo
               scope: public
-              created_at: 1607746963
+              created_at: 1607750742
   "/users/register":
     post:
       summary: Register a user
